--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,57 @@
 body {
   font-family: 'Lato', sans-serif;
-  margin: 30px;
   color: #2b2b2b;
+  margin: 0;
+}
+
+div.container {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+div.header {
+  background: #2D40FF;
+  color: white;
+  height: 540px;
+}
+
+div.headText {
+  width: 650px;
+  margin-left: 100px;
+  top: 150px;
+  position: absolute;
 }
 
 h1, h3, h4 {
   font-weight: normal;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 56px;
+}
+
+h4 {
+  margin-top: 0;
+  font-size: 18px;
+}
+
+h3 {
   text-align: center;
+  font-size: 28px;
+}
+
+p.description {
+  margin: 0;
+  line-height: 1.5em;
+}
+
+img {
+  width: 350px;
+  position: absolute;
+  right: 100px;
+  top: 110px;
 }
 
 p {
@@ -15,13 +60,22 @@ p {
   margin-right: auto;
 }
 
-p.description, p.analysis {
-  margin-bottom: 50px;
+p.analysis {
+  margin-bottom: 90px;
+  margin-top: 20px;
 }
 
 div.legend {
   text-align: center;
-  margin-bottom: 50px;
+  width: 600px;
+  height: 50px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 60px auto;
+}
+
+div.legContent {
+  padding-top: 15px;
 }
 
 .dotUSA {
@@ -68,11 +122,17 @@ div.legend {
   margin-right: 2px;
 }
 
-svg {
-  margin: 2px;
+div.graphs {
+  margin-top: 60px;
 }
 
-div.graphs {
-  margin-top: 20px;
-  margin-bottom: 10px;
+p.humaaans {
+  text-align: center;
+  color: #2D40FF;
+  margin-bottom: 40px;
+  margin-top: 100px;
+}
+
+p.humaaans a {
+  color: #2D40FF;
 }
