--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,8 @@ div.header {
 }
 
 div.headText {
-  width: auto;
+  width: 50%;
+  min-width: 650px;
   margin-left: 100px;
   top: 150px;
   position: absolute;
@@ -50,7 +51,8 @@ p.description {
 }
 
 img {
-  width: 350px;
+  width: 30%;
+  max-width: 350px;
   position: absolute;
   right: 100px;
   top: 110px;
