--- a/styles.css
+++ b/styles.css
@@ -84,10 +84,10 @@ div.legContent {
 
 div.boxes{
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
+  border-radius: 20px;
   height:auto;
   width:auto;
-  margin: 90px auto;
+  margin: 85px;
   padding-top: 15px;
   padding-bottom: 15px;
 }
