--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
   margin: 0;
 }
 
+u{
+  padding-bottom: 5px;
+}
+
 div.container {
   margin-left: 30px;
   margin-right: 30px;
@@ -14,6 +18,7 @@ div.header {
   color: white;
   height: 540px;
   width: auto;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.35);
 }
 
 div.headText {
@@ -73,7 +78,7 @@ div.legend {
   text-align: center;
   width: 600px;
   height: 50px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   margin: 60px auto;
 }
@@ -83,7 +88,7 @@ div.legContent {
 }
 
 div.boxes{
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   height:auto;
   width:auto;
